use jackson to read and modify the settings.json